--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
+    "@nestjs/swagger": "^4.7.12",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
@@ -50,6 +51,7 @@
     "prettier": "^1.19.1",
     "standard-version": "^9.1.0",
     "supertest": "^4.0.2",
+    "swagger-ui-express": "^4.1.6",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
