chore: config default .env.example and lint-staged

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "release:major": "standard-version --release-as major",
     "release:minor": "standard-version --release-as minor",
     "release:patch": "standard-version --release-as patch",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -50,6 +50,7 @@
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.8",
     "jest": "26.4.2",
+    "lint-staged": "^10.5.3",
     "prettier": "^1.19.1",
     "standard-version": "^9.1.0",
     "supertest": "^4.0.2",
