feat: add logger

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.12",
+    "express-rate-limit": "^0.0.0-typescript-beta-7",
     "helmet": "^4.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -45,9 +46,11 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
+    "chalk": "^4.1.0",
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "figures": "^3.2.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.8",
     "jest": "26.4.2",
