--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.12",
+    "cache-manager": "^3.4.0",
+    "cache-manager-redis-store": "^2.0.0",
     "express-rate-limit": "^0.0.0-typescript-beta-7",
     "helmet": "^4.4.1",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +42,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
