--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "release:patch": "standard-version --release-as patch",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage --passWithNoTests",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
@@ -27,12 +27,15 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.6.2",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.12",
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
     "express-rate-limit": "^0.0.0-typescript-beta-7",
     "helmet": "^4.4.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -46,6 +49,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
