chore: add mongoose

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.6.2",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/mongoose": "^7.2.2",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.12",
@@ -34,6 +35,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "express-rate-limit": "^0.0.0-typescript-beta-7",
     "helmet": "^4.4.1",
+    "mongoose": "^5.11.13",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
