--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "release:minor": "standard-version --release-as minor",
     "release:patch": "standard-version --release-as patch",
     "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watch --verbose false",
     "test:cov": "jest --coverage --passWithNoTests",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
@@ -33,6 +33,8 @@
     "@nestjs/swagger": "^4.7.12",
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.13.1",
     "express-rate-limit": "^0.0.0-typescript-beta-7",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.13",
@@ -46,9 +48,10 @@
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/testing": "^7.6.6",
     "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.3",
+    "@types/faker": "^5.1.5",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
     "@types/passport-local": "^1.0.33",
@@ -59,11 +62,13 @@
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "faker": "^5.2.0",
     "figures": "^3.2.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.8",
     "jest": "26.4.2",
     "lint-staged": "^10.5.3",
+    "mongodb-memory-server": "^6.9.3",
     "prettier": "^1.19.1",
     "standard-version": "^9.1.0",
     "supertest": "^4.0.2",
