--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.6.2",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.2",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.12",
+    "bcrypt": "^5.0.0",
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.2",
@@ -39,6 +41,7 @@
     "helmet": "^4.4.1",
     "mongoose": "^5.11.13",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -54,6 +57,7 @@
     "@types/faker": "^5.1.5",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
