--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "up": "docker-compose up -d",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -38,7 +39,7 @@
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "express-rate-limit": "^0.0.0-typescript-beta-7",
-    "helmet": "^4.4.1",
+    "helmet": "^4.1.1",
     "mongoose": "^5.11.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
