--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "express-rate-limit": "^0.0.0-typescript-beta-7",
     "helmet": "^4.1.1",
     "mongoose": "^5.11.13",
+    "mongoose-autopopulate": "^0.12.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^2.1.3",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.6"
@@ -60,6 +62,7 @@
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/request-ip": "^0.0.35",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
